--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,7 +33,6 @@ dependencies:
 
 
   # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   # Required for state management,
   flutter_bloc: ^8.1.2
@@ -41,7 +40,15 @@ dependencies:
   meta: ^1.8.0
   # Required to store local preferences.
   shared_preferences: ^2.0.20
+  # To show the lottie animations.
   lottie: ^2.3.2
+  # To get the weather data.
+  weather: ^2.0.1
+  geolocator: ^9.0.2
+  # To get the permissions.
+  permission_handler: ^10.2.0
+  app_settings: ^4.2.0
+  sqflite: ^2.2.6
 
 dev_dependencies:
   flutter_test:
